# kaluma

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  CONTRIBUTING.md  Diagnostic_Kameleon.ioc  LICENSE  Makefile  Makefile.bak  PROPOSAL.md  README.md  STM32F411RETx_FLASH.ld  build.js  package-lock.json  package.json  pi_clk_mode_tspi_clk_mode_tspi_clk_mode_t  test.js
EWARM/: Diagnostic_Kameleon.dep  Diagnostic_Kameleon.ewd  Diagnostic_Kameleon.ewp  Diagnostic_Kameleon.ewt  Project.eww  stm32f411xe_flash.icf  stm32f411xe_sram.icf
Inc/: buffer.h  diagnostic.h  esp8266_12e.h  is25lq040b.h  main.h  mpu6050.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  uart.h  usbd_conf.h  vcp.h
Src/: buffer.c  diagnostic.c  esp8266_12e.c  is25lq040b.c  main.c  mpu6050.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  uart.c  usbd_cdc_if.c  usbd_conf.c  vcp.c
cmake/: CMakeLists.txt  esp32-wrover-b.cmake  ide.el  kameleon-core.cmake
docs/: API-Reference.md  REPL-commands.md  adc.md  analog_io.md  api_reference.md  board.md  button.md  console.md  digital_io.md  events.md  global.md  gpio.md  i2c.md  led.md  process.md  pwm.md  repl.md  spi.md  timers.md  uart.md
esp32/: .gitignore  CMakeLists.txt  README.md  build_all.sh  build_cscope.sh  build_modules.sh  ide.el  inspect.js  partitions.csv  sdkconfig
esp32/components/jerryscript/: CMakeLists.txt  build.sh  toolchain_mcu_esp32.cmake
esp32/main/: CMakeLists.txt  esp32_main.c  ieee80211dev.c  pwm_module.c
esp32/main/targets/boards/esp32-devc/: README.md
esp32/main/targets/boards/esp32-devc/include/: esp32_devc.h
esp32/main/targets/boards/esp32-devc/src/: adc.c  flash.c  gpio.c  i2c.c  nvs.c  pwm.c  spi.c  storage.c  system.c  uart.c
esp32/main/targets/boards/esp32-devkitc/: README.md  target.cmake
esp32/main/targets/boards/esp32-devkitc/include/: esp32_devkitc.h
esp32/main/targets/boards/esp32-devkitc/js/: Makefile  convert.rb  net_test.js  network_test.js
esp32/main/targets/boards/esp32-devkitc/src/: adc.c  flash.c  gpio.c  i2c.c  i2c_freertos.c  ieee80211.c  net_test_script.c  network_test_script.c  pwm.c  spi.c  storage.c  system.c  tcp.c  tty.c  uart.c
esp32/main/targets/boards/esp32-wrover-b/: README.md  board.js  target.cmake
esp32/main/targets/boards/esp32-wrover-b/include/: kameleon_core.h
esp32/main/targets/boards/esp32-wrover-b/src/: adc.c  flash.c  gpio.c  http_test.js  i2c.c  i2c_freertos.c  pwm.c  spi.c  storage.c  storage_test.js  system.c  tty.c  uart.c
include/: base64.h  buffer.h  err.h  errno.h  events.h  global.h  io.h  jerryxx.h  kalamu_config.h  kaluma_config.h  kameleon_config.h  kameleon_io.h  kameleon_list.h  kameleon_repl.h  magic_strings.h  prog.h  program.h  queue.h  (+5 more)
(+663 files in other folders)
